Correction concernant les listes

--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
         <!-- lists -->
         <h2 id="liste">Listes</h2>
         <ul>
-            <li>Element de liste 01</li>
-            <li>Element de liste 02</li>
-            <li>Element de liste 03
+            <li>Élément de liste 01</li>
+            <li>Élément de liste 02</li>
+            <li>Élément de liste 03
                 <ul>
-                    <li>Element de liste 04</li>
+                    <li>Élément de liste 04</li>
                 </ul>
             </li>
         </ul>
