- Renommage des token de font-size - Ajout de la font roboto mono + classe .qc-code - Ajout des token au catalogue

--- a/index.html
+++ b/index.html
@@ -38,42 +38,42 @@
             <div class="color-sample qc-bg-pale-blue"></div>
             <div class="color-description">
                 <strong>Bleu pâle</strong><br/>
-                <span>--qc-pale-blue</span>
+                <span class="qc-code" >--qc-pale-blue</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-light-blue"></div>
             <div class="color-description">
                 <strong>Bleu clair</strong><br/>
-                <span>--qc-light-blue</span>
+                <span class="qc-code" >--qc-light-blue</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-blue"></div>
             <div class="color-description">
                 <strong>Bleu</strong><br/>
-                <span>--qc-blue</span>
+                <span class="qc-code" >--qc-blue</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-piv-blue"></div>
             <div class="color-description">
                 <strong>Bleu piv</strong><br/>
-                <span>--qc-piv-blue</span>
+                <span class="qc-code" >--qc-piv-blue</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-medium-blue"></div>
             <div class="color-description">
                 <strong>Bleu moyen</strong><br/>
-                <span>--qc-medium-blue</span>
+                <span class="qc-code" >--qc-medium-blue</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-dark-blue"></div>
             <div class="color-description">
                 <strong>Bleu foncé</strong><br/>
-                <span>--qc-dark-blue</span>
+                <span class="qc-code" >--qc-dark-blue</span>
             </div>
         </div>
 
@@ -82,7 +82,7 @@
             <div class="color-sample qc-bg-pink-accent"></div>
             <div class="color-description">
                 <strong>Rose</strong><br/>
-                <span>--qc-pink</span>
+                <span class="qc-code" >--qc-pink</span>
             </div>
         </div>
 
@@ -91,35 +91,35 @@
             <div class="color-sample qc-bg-pale-grey"></div>
             <div class="color-description">
                 <strong>Gris pâle</strong><br/>
-                <span>--qc-pale-grey</span>
+                <span class="qc-code" >--qc-pale-grey</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-light-grey"></div>
             <div class="color-description">
                 <strong>Gris clair</strong><br/>
-                <span>--qc-light-grey</span>
+                <span class="qc-code" >--qc-light-grey</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-grey"></div>
             <div class="color-description">
                 <strong>Gris</strong><br/>
-                <span>--qc-grey</span>
+                <span class="qc-code" >--qc-grey</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-medium-grey"></div>
             <div class="color-description">
                 <strong>Gris moyen</strong><br/>
-                <span>--qc-medium-grey</span>
+                <span class="qc-code" >--qc-medium-grey</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-dark-grey"></div>
             <div class="color-description">
                 <strong>Gris foncé</strong><br/>
-                <span>--qc-dark-grey</span>
+                <span class="qc-code" >--qc-dark-grey</span>
             </div>
         </div>
 
@@ -129,28 +129,28 @@
             <div class="color-sample qc-bg-pale-pink"></div>
             <div class="color-description">
                 <strong>Rose pâle</strong><br/>
-                <span>--qc-pale-pink</span>
+                <span class="qc-code" >--qc-pale-pink</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-pink"></div>
             <div class="color-description">
                 <strong>Rose</strong><br/>
-                <span>--qc-pink</span>
+                <span class="qc-code" >--qc-pink</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-red"></div>
             <div class="color-description">
                 <strong>Rouge</strong><br/>
-                <span>--qc-red, --qc-error</span>
+                <span class="qc-code" >--qc-red, --qc-error</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-dark-red"></div>
             <div class="color-description">
                 <strong>Rouge foncé</strong><br/>
-                <span>--qc-dark-red, --qc-danger</span>
+                <span class="qc-code" >--qc-dark-red, --qc-danger</span>
             </div>
         </div>
         <h4>Verts</h4>
@@ -158,21 +158,21 @@
             <div class="color-sample qc-bg-pale-green"></div>
             <div class="color-description">
                 <strong>Vert pâle</strong><br/>
-                <span>--qc-pale-green</span>
+                <span class="qc-code" >--qc-pale-green</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-green"></div>
             <div class="color-description">
                 <strong>Vert</strong><br/>
-                <span>--qc-green, --qc-success</span>
+                <span class="qc-code" >--qc-green, --qc-success</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-dark-green"></div>
             <div class="color-description">
                 <strong>Vert foncé</strong><br/>
-                <span>--qc-dark-green</span>
+                <span class="qc-code" >--qc-dark-green</span>
             </div>
         </div>
         <h4>Jaunes</h4>
@@ -180,21 +180,21 @@
             <div class="color-sample qc-bg-pale-yellow"></div>
             <div class="color-description">
                 <strong>Jaune pâle</strong><br/>
-                <span>--qc-pale-yellow</span>
+                <span class="qc-code" >--qc-pale-yellow</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-yellow"></div>
             <div class="color-description">
                 <strong>Jaune</strong><br/>
-                <span>--qc-yellow</span>
+                <span class="qc-code" >--qc-yellow</span>
             </div>
         </div>
         <div class="color-details">
             <div class="color-sample qc-bg-dark-yellow"></div>
             <div class="color-description">
                 <strong>Jaune foncé</strong><br/>
-                <span>--qc-dark-yellow</span>
+                <span class="qc-code" >--qc-dark-yellow</span>
             </div>
         </div>
 
@@ -204,11 +204,37 @@
         <div class="qc-gallery title-samples">
             <figure class="qc-figure">
                 <p class="qc-h1">Titre de niveau 1</p>
+                <p>
+                    <strong>Taille de police/interlignage pour les h1</strong><br/>
+                    <span class="qc-code" >--qc-font-size-h1, --qc-line-height-h1</span>
+                </p>
                 <p class="qc-h2">Titre de niveau 2</p>
+                <p>
+                    <strong>Taille de police/interlignage pour les h2</strong><br/>
+                    <span class="qc-code" >--qc-font-size-h2, --qc-line-height-h2</span>
+                </p>
                 <p class="qc-h3">Titre de niveau 3</p>
+                <p>
+                    <strong>Taille de police/interlignage pour les h3</strong><br/>
+                    <span class="qc-code" >--qc-font-size-h3, --qc-line-height-h3</span>
+                </p>
+
                 <p class="qc-h4">Titre de niveau 4</p>
+                <p>
+                    <strong>Taille de police/interlignage pour les h4</strong><br/>
+                    <span class="qc-code" >--qc-font-size-h4, --qc-line-height-h4</span>
+                </p>
                 <p class="qc-h5">Titre de niveau 5</p>
+                <p>
+                    <strong>Taille de police/interlignage pour les h5</strong><br/>
+                    <span class="qc-code" >--qc-font-size-h5, --qc-line-height-h5</span>
+                </p>
                 <p class="qc-h6">Titre de niveau 6</p>
+                <p>
+                    <strong>Taille de police/interlignage pour les h6</strong><br/>
+                    <span class="qc-code" >--qc-font-size-h6, --qc-line-height-h6</span>
+                </p>
+
             </figure>
 
             <figure class="qc-image">
@@ -234,15 +260,35 @@
 
         <h2 id="polices">Polices de caractères</h2>
         <div class="font-titles">
-            <p><strong>Roboto</strong></p>
+            <h3><strong>Roboto</strong></h3>
             <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</p>
             <p>abcdefghijklmnopqrstuvwxyz0123456789</p>
+            <p>
+                <strong>Police</strong><br/>
+                <span class="qc-code" >--qc-header-font-family</span>
+            </p>
         </div>
         <div>
-            <p><strong>Open Sans</strong></p>
+            <h3><strong>Open Sans</strong></h3>
             <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</p>
             <p>abcdefghijklmnopqrstuvwxyz0123456789</p>
+            <p>
+                <strong>Police</strong><br/>
+                <span class="qc-code" >--qc-content-font-family</span>
+            </p>
         </div>
+        <div >
+            <h3><strong>Roboto Mono</strong></h3>
+            <div class="qc-code">
+                <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</p>
+                <p>abcdefghijklmnopqrstuvwxyz0123456789</p>
+            </div>
+            <p>
+                <strong>Police</strong><br/>
+                <span class="qc-code" >--qc-code-font-family</span>
+            </p>
+        </div>
+
 
         <!-- lists -->
         <h2 id="liste">Listes</h2>
@@ -358,49 +404,87 @@
                 </div>
             </div>
         </div>
-
+        <p>
+            <strong>Points de rupture</strong><br/>
+            <span class="qc-code">--qc-breakpoint-mobile/--qc-breakpoint-sm<br>
+                --qc-breakpoint-tablet/--qc-breakpoint-md<br>
+                --qc-breakpoint-desktop/--qc-breakpoint-lg
+            </span>
+        </p>
 
         <h2 id="liens">Liens</h2>
+       <h3>Liens internes</h3>
         <p>
-            <strong>Lien interne</strong> <br/>
+
             <a href="#" class="not-visited">Règlement de pêche dans la zone 21.</a>
         </p>
         <p>
-            <strong>Survol, focus</strong> <br/>
+            <strong>Couleur</strong><br/>
+            <span class="qc-code">--qc-link</span>
+        </p>
+        <h3>Survol, focus</h3>
+        <p>
+
             <a href="#" class="pseudo-hover">Règlement de pêche dans la zone 21.</a>
         </p>
         <p>
-            <strong>Lien externe</strong> <br/>
+            <strong>Couleur</strong><br/>
+            <span class="qc-code">--qc-link-hover</span>
+        </p>
+        <h3>Lien externe</h3>
+        <p>
             <a href="#" class="not-visited">Un long lien - réduire la taille de l’écran pour constater l’espace insécable devant l’icone de lien
                 <span class="external-link-tail">externe. <img src="svg/external-link.svg" alt="Cet hyperlien s’ouvrira dans une autre fenêtre"></span></a>
         </p>
+        <h3>Lien visités</h3>
+
         <p>
-            <strong>Liens visités</strong> <br/>
             <a href="#" class="visited">Règlement de pêche dans la zone 21.</a>
         </p>
-
+        <p>
+            <strong>Couleur</strong><br/>
+            <span class="qc-code">--qc-link-visited</span>
+        </p>
         <h2 id="ombrages">Ombrages</h2>
 
         <p><strong>Élévation 0</strong></p>
         <p>Usage : encadrés</p>
         <p class="qc-shading-0 square-box">Élévation 0</p>
+        <p>
+            <strong>Ombre</strong><br/>
+            <span class="qc-code">--qc-box-shadow-0</span>
+        </p>
 
         <p><strong>Élévation 1</strong></p>
         <p>Usage : tuiles cliquables, boutons principaux</p>
         <p class="qc-shading-1 square-box">Élévation 1</p>
-
+        <p>
+            <strong>Ombre</strong><br/>
+            <span class="qc-code">--qc-box-shadow-1</span>
+        </p>
         <p><strong>Élévation 2</strong></p>
         <p>Usage : infobulle</p>
         <p class="qc-shading-2 square-box">Élévation 2</p>
+        <p>
+            <strong>Ombre</strong><br/>
+            <span class="qc-code">--qc-box-shadow-2</span>
+        </p>
 
         <p><strong>Élévation 3</strong></p>
         <p>Usage : champ date avec calendrier, sous-menu, notification contextuelle</p>
         <p class="qc-shading-3 square-box">Élévation 3</p>
+        <p>
+            <strong>Ombre</strong><br/>
+            <span class="qc-code">--qc-box-shadow-3</span>
+        </p>
 
         <p><strong>Élévation 4</strong></p>
         <p>Usage : Boîte de dialogue modale</p>
         <p class="qc-shading-4 square-box">Élévation 4</p>
-
+        <p>
+            <strong>Ombre</strong><br/>
+            <span class="qc-code">--qc-box-shadow-4</span>
+        </p>
         <!-- Citations -->
         <!--<h2 id="citations">Citations</h2>
         <blockquote lang="en">
