- Modification de l'index (liens, ombrages) - Ajout de la pseudo class active dans l'index

--- a/index.html
+++ b/index.html
@@ -424,12 +424,19 @@
         </p>
         <h3>Survol, focus</h3>
         <p>
-
             <a href="#" class="pseudo-hover">Règlement de pêche dans la zone 21.</a>
         </p>
         <p>
             <strong>Couleur</strong><br/>
             <span class="qc-code">--qc-link-hover</span>
+        </p>
+        <h3>Lien actif</h3>
+        <p>
+            <a href="#" class="pseudo-active">Règlement de pêche dans la zone 21.</a>
+        </p>
+        <p>
+            <strong>Couleur</strong><br/>
+            <span class="qc-code">--qc-link-active</span>
         </p>
         <h3>Lien externe</h3>
         <p>
@@ -437,7 +444,6 @@
                 <span class="external-link-tail">externe. <img src="svg/external-link.svg" alt="Cet hyperlien s’ouvrira dans une autre fenêtre"></span></a>
         </p>
         <h3>Lien visités</h3>
-
         <p>
             <a href="#" class="visited">Règlement de pêche dans la zone 21.</a>
         </p>
@@ -447,7 +453,7 @@
         </p>
         <h2 id="ombrages">Ombrages</h2>
 
-        <p><strong>Élévation 0</strong></p>
+        <h3>Élévation 0</h3>
         <p>Usage : encadrés</p>
         <p class="qc-shading-0 square-box">Élévation 0</p>
         <p>
@@ -455,14 +461,14 @@
             <span class="qc-code">--qc-box-shadow-0</span>
         </p>
 
-        <p><strong>Élévation 1</strong></p>
+        <h3>Élévation 1</h3>
         <p>Usage : tuiles cliquables, boutons principaux</p>
         <p class="qc-shading-1 square-box">Élévation 1</p>
         <p>
             <strong>Ombre</strong><br/>
             <span class="qc-code">--qc-box-shadow-1</span>
         </p>
-        <p><strong>Élévation 2</strong></p>
+        <h3>Élévation 2</h3>
         <p>Usage : infobulle</p>
         <p class="qc-shading-2 square-box">Élévation 2</p>
         <p>
@@ -470,7 +476,7 @@
             <span class="qc-code">--qc-box-shadow-2</span>
         </p>
 
-        <p><strong>Élévation 3</strong></p>
+        <h3>Élévation 3</h3>
         <p>Usage : champ date avec calendrier, sous-menu, notification contextuelle</p>
         <p class="qc-shading-3 square-box">Élévation 3</p>
         <p>
@@ -478,7 +484,7 @@
             <span class="qc-code">--qc-box-shadow-3</span>
         </p>
 
-        <p><strong>Élévation 4</strong></p>
+        <h3>Élévation 4</h3>
         <p>Usage : Boîte de dialogue modale</p>
         <p class="qc-shading-4 square-box">Élévation 4</p>
         <p>
