- Ajout d'un mixin clearfix() - Ajustement de la grille dans le catalogue

--- a/index.html
+++ b/index.html
@@ -411,6 +411,10 @@
                 --qc-breakpoint-desktop/--qc-breakpoint-lg
             </span>
         </p>
+        <p>
+            <strong>Gouttière</strong><br/>
+            <span class="qc-code">--qc-breakpoint-gutter</span>
+        </p>
 
         <h2 id="liens">Liens</h2>
        <h3>Liens internes</h3>
