- ajout du violet au catalogue.

--- a/index.html
+++ b/index.html
@@ -197,6 +197,14 @@
                 <span class="qc-code" >--qc-dark-yellow</span>
             </div>
         </div>
+        <h4>Violet</h4>
+        <div class="color-details">
+            <div class="color-sample qc-bg-purple"></div>
+            <div class="color-description">
+                <strong>Violet</strong><br/>
+                <span class="qc-code" >--qc-purple, --qc-link-visited</span>
+            </div>
+        </div>
 
 
         <!-- titles -->
