- ajout de tokens concernant les paragraphes - ajout du token text-primary (dark-blue) - correction concernant le bold dans les titres du catalogue

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="color-sample qc-bg-dark-blue"></div>
             <div class="color-description">
                 <strong>Bleu foncé</strong><br/>
-                <span class="qc-code" >--qc-dark-blue</span>
+                <span class="qc-code" >--qc-dark-blue, --qc-text-primary</span>
             </div>
         </div>
 
@@ -265,6 +265,14 @@
             neque orci gravida diam, eu gravida nulla justo ac nisi. Nullam vitae sapien id augue imperdiet vehicula id
             et risus. Cras egestas aliquam magna eu aliquam. Sed aliquam semper est in imperdiet. Pellentesque non
             ultrices nibh. Nullam hendrerit dictum gravida. Aliquam vel arcu in odio dapibus malesuada.</p>
+        <p>
+            <strong>Taille de police/interlignage</strong><br/>
+            <span class="qc-code" >--qc-content-font-size-100, --qc-content-line-height-100</span>
+        </p>
+        <p>
+            <strong>Marge basse</strong><br/>
+            <span class="qc-code" >--qc-spacer-md</span>
+        </p>
 
         <h2 id="polices">Polices de caractères</h2>
         <div class="font-titles">
