- refonte des points de rupture - retrait des noms parlants mobile, tablet, desktop.

--- a/index.html
+++ b/index.html
@@ -368,21 +368,21 @@
                 </div>
             </div>
             <div class="qc-row">
-                <div class="  qc-col-tablet-6">
+                <div class="  qc-col-md-6">
                     <div>6</div>
                 </div>
-                <div class="  qc-col-tablet-6">
+                <div class="  qc-col-md-6">
                     <div>6</div>
                 </div>
             </div>
             <div class="qc-row">
-                <div class=" qc-col-tablet-4">
+                <div class=" qc-col-md-4">
                     <div>4</div>
                 </div>
-                <div class=" qc-col-tablet-4">
+                <div class=" qc-col-md-4">
                     <div>4</div>
                 </div>
-                <div class=" qc-col-tablet-4">
+                <div class=" qc-col-md-4">
                     <div>4</div>
                 </div>
             </div>
@@ -403,28 +403,28 @@
             </div>
 
             <div class="qc-row">
-                <div class="qc-col-tablet-9 ">
+                <div class="qc-col-md-9 ">
                     <div>9</div>
                 </div>
-                <div class="qc-col-tablet-3 ">
+                <div class="qc-col-md-3 ">
                     <div>3</div>
                 </div>
             </div>
 
             <div class="qc-row">
-                <div class="qc-col-tablet-3 ">
+                <div class="qc-col-md-3 ">
                     <div>3</div>
                 </div>
-                <div class="qc-col-tablet-9 ">
+                <div class="qc-col-md-9 ">
                     <div>9</div>
                 </div>
             </div>
         </div>
         <p>
             <strong>Points de rupture</strong><br/>
-            <span class="qc-code">--qc-breakpoint-mobile/--qc-breakpoint-sm<br>
-                --qc-breakpoint-tablet/--qc-breakpoint-md<br>
-                --qc-breakpoint-desktop/--qc-breakpoint-lg
+            <span class="qc-code">---qc-breakpoint-sm<br>
+                --qc-breakpoint-md<br>
+                --qc-breakpoint-lg
             </span>
         </p>
         <p>
