- Refonte de la structure des fichiers (pour se baser sur les répertoires habituels des projets node) - Refonte des variables - tout est dans une map - Refonte de la génération des token - Nettoyage, simplification

--- a/public/index.html
+++ b/public/index.html
@@ -35,174 +35,174 @@
         <h2 id="couleurs">Couleurs</h2>
         <h3>Couleur principale</h3>
         <div class="color-details">
-            <div class="color-sample qc-bg-pale-blue"></div>
+            <div class="color-sample qc-bg-color-blue-pale"></div>
             <div class="color-description">
                 <strong>Bleu pâle</strong><br/>
-                <span class="qc-code" >--qc-pale-blue</span>
+                <span class="qc-code" >--qc-color-blue-pale</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-light-blue"></div>
+            <div class="color-sample qc-bg-color-blue-light"></div>
             <div class="color-description">
                 <strong>Bleu clair</strong><br/>
-                <span class="qc-code" >--qc-light-blue</span>
+                <span class="qc-code" >--qc-color-blue-light</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-blue"></div>
+            <div class="color-sample qc-bg-color-blue-regular"></div>
             <div class="color-description">
                 <strong>Bleu</strong><br/>
-                <span class="qc-code" >--qc-blue</span>
+                <span class="qc-code" >--qc-color-blue-regular</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-piv-blue"></div>
+            <div class="color-sample qc-bg-color-blue-piv"></div>
             <div class="color-description">
                 <strong>Bleu piv</strong><br/>
-                <span class="qc-code" >--qc-piv-blue</span>
+                <span class="qc-code" >--qc-color-blue-piv</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-medium-blue"></div>
+            <div class="color-sample qc-bg-color-blue-medium"></div>
             <div class="color-description">
                 <strong>Bleu moyen</strong><br/>
-                <span class="qc-code" >--qc-medium-blue</span>
+                <span class="qc-code" >--qc-color-blue-medium</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-dark-blue"></div>
+            <div class="color-sample qc-bg-color-blue-dark"></div>
             <div class="color-description">
                 <strong>Bleu foncé</strong><br/>
-                <span class="qc-code" >--qc-dark-blue, --qc-text-primary</span>
+                <span class="qc-code" >--qc-color-blue-dark, --qc-color-text-primary</span>
             </div>
         </div>
 
         <h3>Couleurs d’accent</h3>
         <div class="color-details">
-            <div class="color-sample qc-bg-pink-accent"></div>
+            <div class="color-sample qc-bg-color-accent"></div>
             <div class="color-description">
                 <strong>Rose</strong><br/>
-                <span class="qc-code" >--qc-pink</span>
+                <span class="qc-code" >--qc-color-accent</span>
             </div>
         </div>
 
         <h3>Niveaux de gris</h3>
         <div class="color-details">
-            <div class="color-sample qc-bg-pale-grey"></div>
+            <div class="color-sample qc-bg-color-grey-pale"></div>
             <div class="color-description">
                 <strong>Gris pâle</strong><br/>
-                <span class="qc-code" >--qc-pale-grey</span>
+                <span class="qc-code" >--qc-color-grey-pale</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-light-grey"></div>
+            <div class="color-sample qc-bg-color-grey-light"></div>
             <div class="color-description">
                 <strong>Gris clair</strong><br/>
-                <span class="qc-code" >--qc-light-grey</span>
+                <span class="qc-code" >--qc-color-grey-light</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-grey"></div>
+            <div class="color-sample qc-bg-color-grey-regular"></div>
             <div class="color-description">
                 <strong>Gris</strong><br/>
-                <span class="qc-code" >--qc-grey</span>
+                <span class="qc-code" >--qc-color-grey-regular</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-medium-grey"></div>
+            <div class="color-sample qc-bg-color-grey-medium"></div>
             <div class="color-description">
                 <strong>Gris moyen</strong><br/>
-                <span class="qc-code" >--qc-medium-grey</span>
+                <span class="qc-code" >--qc-color-grey-medium</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-dark-grey"></div>
+            <div class="color-sample qc-bg-color-green-dark"></div>
             <div class="color-description">
                 <strong>Gris foncé</strong><br/>
-                <span class="qc-code" >--qc-dark-grey</span>
+                <span class="qc-code" >--qc-color-green-dark</span>
             </div>
         </div>
 
         <h3>Couleurs fonctionnelles</h3>
         <h4>Rouges</h4>
         <div class="color-details">
-            <div class="color-sample qc-bg-pale-pink"></div>
+            <div class="color-sample qc-bg-color-pink-pale"></div>
             <div class="color-description">
                 <strong>Rose pâle</strong><br/>
-                <span class="qc-code" >--qc-pale-pink</span>
+                <span class="qc-code" >--qc-color-pink-pale</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-pink"></div>
+            <div class="color-sample qc-bg-color-pink-regular"></div>
             <div class="color-description">
                 <strong>Rose</strong><br/>
-                <span class="qc-code" >--qc-pink</span>
+                <span class="qc-code" >--qc-color-pink-regular</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-red"></div>
+            <div class="color-sample qc-bg-color-red-regular"></div>
             <div class="color-description">
                 <strong>Rouge</strong><br/>
-                <span class="qc-code" >--qc-red, --qc-error</span>
+                <span class="qc-code" >--qc-color-red-regular, --qc-color-error</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-dark-red"></div>
+            <div class="color-sample qc-bg-color-red-dark"></div>
             <div class="color-description">
                 <strong>Rouge foncé</strong><br/>
-                <span class="qc-code" >--qc-dark-red, --qc-danger</span>
+                <span class="qc-code" >--qc-color-red-dark, --qc-color-danger</span>
             </div>
         </div>
         <h4>Verts</h4>
         <div class="color-details">
-            <div class="color-sample qc-bg-pale-green"></div>
+            <div class="color-sample qc-bg-color-green-pale"></div>
             <div class="color-description">
                 <strong>Vert pâle</strong><br/>
-                <span class="qc-code" >--qc-pale-green</span>
+                <span class="qc-code" >--qc-color-green-pale</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-green"></div>
+            <div class="color-sample qc-bg-color-green-regular"></div>
             <div class="color-description">
                 <strong>Vert</strong><br/>
-                <span class="qc-code" >--qc-green, --qc-success</span>
+                <span class="qc-code" >--qc-color-green-regular, --qc-color-success</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-dark-green"></div>
+            <div class="color-sample qc-bg-color-green-dark"></div>
             <div class="color-description">
                 <strong>Vert foncé</strong><br/>
-                <span class="qc-code" >--qc-dark-green</span>
+                <span class="qc-code" >--qc-color-green-dark</span>
             </div>
         </div>
         <h4>Jaunes</h4>
         <div class="color-details">
-            <div class="color-sample qc-bg-pale-yellow"></div>
+            <div class="color-sample qc-bg-color-yellow-pale"></div>
             <div class="color-description">
                 <strong>Jaune pâle</strong><br/>
-                <span class="qc-code" >--qc-pale-yellow</span>
+                <span class="qc-code" >--qc-color-yellow-pale</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-yellow"></div>
+            <div class="color-sample qc-bg-color-yellow-regular"></div>
             <div class="color-description">
                 <strong>Jaune</strong><br/>
-                <span class="qc-code" >--qc-yellow</span>
+                <span class="qc-code" >--qc-color-yellow-regular</span>
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-dark-yellow"></div>
+            <div class="color-sample qc-bg-color-yellow-dark"></div>
             <div class="color-description">
                 <strong>Jaune foncé</strong><br/>
-                <span class="qc-code" >--qc-dark-yellow</span>
+                <span class="qc-code" >--qc-color-yellow-dark</span>
             </div>
         </div>
         <h4>Violet</h4>
         <div class="color-details">
-            <div class="color-sample qc-bg-purple"></div>
+            <div class="color-sample qc-bg-color-purple"></div>
             <div class="color-description">
                 <strong>Violet</strong><br/>
-                <span class="qc-code" >--qc-purple, --qc-link-visited</span>
+                <span class="qc-code" >--qc-color-purple, --qc-color-link-visited</span>
             </div>
         </div>
 
@@ -422,7 +422,7 @@
         </div>
         <p>
             <strong>Points de rupture</strong><br/>
-            <span class="qc-code">---qc-breakpoint-sm<br>
+            <span class="qc-code">--qc-breakpoint-sm<br>
                 --qc-breakpoint-md<br>
                 --qc-breakpoint-lg
             </span>
@@ -440,7 +440,7 @@
         </p>
         <p>
             <strong>Couleur</strong><br/>
-            <span class="qc-code">--qc-link</span>
+            <span class="qc-code">--qc-link-text</span>
         </p>
         <h3>Survol, focus</h3>
         <p>
