--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../dist/css/qc-sdg.css">
-    <link rel="stylesheet" href="scss/qc-catalog-sdg.css">
+    <link rel="stylesheet" href="css/qc-sdg.css">
+    <link rel="stylesheet" href="css/qc-catalog-sdg.css">
     <title>Catalogue des composants du système de design gouvernemental</title>
 </head>
 <body>
@@ -461,7 +461,7 @@
         <h3>Lien externe</h3>
         <p>
             <a href="#" class="not-visited">Un long lien - réduire la taille de l’écran pour constater l’espace insécable devant l’icone de lien
-                <span class="external-link-tail">externe. <img src="../dist/img/external-link.svg" alt="Cet hyperlien s’ouvrira dans une autre fenêtre"></span></a>
+                <span class="external-link-tail">externe. <img src="img/external-link.svg" alt="Cet hyperlien s’ouvrira dans une autre fenêtre"></span></a>
         </p>
         <h3>Lien visités</h3>
         <p>
