- ajout de la source de l'image de lien externe directemant en css - déplacement des fichiers compilés depuis bootstrap dans un dossier build

--- a/public/index.html
+++ b/public/index.html
@@ -461,7 +461,7 @@
         <h3>Lien externe</h3>
         <p>
             <a href="#" class="not-visited">Un long lien - réduire la taille de l’écran pour constater l’espace insécable devant l’icone de lien
-                <span class="external-link-tail">externe. <img src="img/external-link.svg" alt="Cet hyperlien s’ouvrira dans une autre fenêtre"></span></a>
+                <span class="external-link-tail">externe. <img class="external-link-img" alt="Cet hyperlien s’ouvrira dans une autre fenêtre"></span></a>
         </p>
         <h3>Lien visités</h3>
         <p>
