--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/qc-sdg.css">
     <link rel="stylesheet" href="css/qc-catalog-sdg.css">
+    <script  src="js/qc-catalog-sdg.js"></script>
     <title>Catalogue des composants du système de design gouvernemental</title>
 </head>
 <body>
